k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloWorld-k8s-service
spec:
  selector:
    app: spring-boot-k8s
  Ports: 
   - protocal: "TCP"
     port: 8080
     targetPort: 8080
  type: NodePort
