ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-boot-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
  labels:
    AllowInsecureIngress: "true"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: helloworld-k8s-service
          servicePort: 8080
        path: /acv
